--- a/leads/templates/leads/lead_create.html
+++ b/leads/templates/leads/lead_create.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <a href="{% url 'leads:lead-list' %}">back</a>
-    <h1>Create New Lead</h1>
+    <a href="{% url 'leads:lead-list' %}">Go back to leads</a>
+    <hr />
+    <h1>Create a new lead</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
