--- a/templates/second_page.html
+++ b/templates/second_page.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello DJCRM</h1>
-    <p>test second page</p>
+    <h1>Hello world</h1>
+    <p>This is the second page</p>
     <ul>
         {% for lead in leads %}
         <li>{{ lead }}</li>
         {% endfor %}
     </ul>
-
 </body>
 </html>
