--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,15 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DJCRM</title>
+    <title>DjangoCRM</title>
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="max-w-7xl mx-auto">
         {% include 'navbar.html' %}
@@ -17,4 +19,5 @@
     </div>
     {% include "scripts.html" %}
 </body>
+
 </html>
